promotions issue fixed and deep linking handled

--- a/Hippo/FuguUnique.storyboard
+++ b/Hippo/FuguUnique.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vAr-Qq-z1C">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vAr-Qq-z1C">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -1867,7 +1867,7 @@
                         <rightBarButtonItems>
                             <barButtonItem title="Item" style="plain" id="Mh5-T0-buE">
                                 <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="u78-hd-ZhM">
-                                    <rect key="frame" x="338" y="11" width="21" height="22"/>
+                                    <rect key="frame" x="317" y="1" width="42" height="42"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <state key="normal" image="optionIcons"/>
                                     <connections>
@@ -2403,9 +2403,9 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Mb-TI-CqX" userLabel="errorContentView">
-                                <rect key="frame" x="0.0" y="65" width="375" height="0.0"/>
+                                <rect key="frame" x="0.0" y="44" width="375" height="0.0"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3zq-Y7-p6S">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="hjbj" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3zq-Y7-p6S">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="0.0"/>
                                         <color key="backgroundColor" red="0.88023829460000003" green="0.16684350370000001" blue="0.28022629020000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="10.5"/>
@@ -2422,14 +2422,6 @@
                                     <constraint firstAttribute="bottom" secondItem="3zq-Y7-p6S" secondAttribute="bottom" id="xXh-Cm-FjL"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="01T-cv-WrQ">
-                                <rect key="frame" x="0.0" y="65" width="375" height="553"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <connections>
-                                    <outlet property="dataSource" destination="EJI-9R-RFa" id="HEA-aI-rHH"/>
-                                    <outlet property="delegate" destination="EJI-9R-RFa" id="IwE-sJ-WI1"/>
-                                </connections>
-                            </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Oxj-by-MDK" userLabel="HeaderView">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="0.0"/>
                                 <subviews>
@@ -2462,12 +2454,19 @@
                                 <rect key="frame" x="167.5" y="313.5" width="40" height="40"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="01T-cv-WrQ">
+                                <rect key="frame" x="0.0" y="44" width="375" height="574"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="EJI-9R-RFa" id="HEA-aI-rHH"/>
+                                    <outlet property="delegate" destination="EJI-9R-RFa" id="IwE-sJ-WI1"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="01T-cv-WrQ" firstAttribute="leading" secondItem="0pj-2f-m5u" secondAttribute="leading" id="KZe-Ez-HKB"/>
                             <constraint firstItem="ixV-F0-mX9" firstAttribute="top" secondItem="01T-cv-WrQ" secondAttribute="bottom" id="UlY-zl-SKu"/>
-                            <constraint firstItem="3Mb-TI-CqX" firstAttribute="top" secondItem="Oxj-by-MDK" secondAttribute="bottom" constant="65" id="VO6-Zz-cYB"/>
                             <constraint firstItem="DhK-89-YLr" firstAttribute="centerX" secondItem="0pj-2f-m5u" secondAttribute="centerX" id="Wi7-4p-Xup"/>
                             <constraint firstItem="Oxj-by-MDK" firstAttribute="top" secondItem="0pj-2f-m5u" secondAttribute="top" id="bfn-mT-bp7"/>
                             <constraint firstItem="Oxj-by-MDK" firstAttribute="leading" secondItem="0pj-2f-m5u" secondAttribute="leading" id="egm-jd-3gt"/>
@@ -2476,6 +2475,7 @@
                             <constraint firstItem="DhK-89-YLr" firstAttribute="centerY" secondItem="0pj-2f-m5u" secondAttribute="centerY" id="i3u-Gg-A7E"/>
                             <constraint firstItem="3Mb-TI-CqX" firstAttribute="leading" secondItem="01T-cv-WrQ" secondAttribute="leading" id="irg-9p-Efs"/>
                             <constraint firstAttribute="trailing" secondItem="01T-cv-WrQ" secondAttribute="trailing" id="m7o-HT-56K"/>
+                            <constraint firstItem="3Mb-TI-CqX" firstAttribute="top" secondItem="Kgh-OH-wia" secondAttribute="bottom" id="nLt-9i-oyP"/>
                             <constraint firstItem="01T-cv-WrQ" firstAttribute="top" secondItem="3Mb-TI-CqX" secondAttribute="bottom" id="wlz-ut-8OB"/>
                             <constraint firstItem="3Mb-TI-CqX" firstAttribute="width" secondItem="0pj-2f-m5u" secondAttribute="width" id="ycv-7b-qtm"/>
                         </constraints>
